@@ -218,6 +218,7 @@ wubi (9.04) UNRELEASED; urgency=low
   * Uncompress all target subdirectories (LP: #359716)
   * If the target directory already exists, quit with an error message
     (LP: #364166)
+  * Avoid non-ascii chars in username and volume name (lp: #365648)
 
   [ Hampus Wessman ]
   * Added a new metalink parser
@@ -259,4 +260,4 @@ wubi (9.04) UNRELEASED; urgency=low
   * Check for preseed.$(distro) in the data directory before assuming that
     preseed.lupin should be used. (LP: #359834)
 
- -- Agostino Russo <agostino.russo@gmail.com>  Tue, 21 Apr 2009 00:09:12 +0100
+ -- Agostino Russo <agostino.russo@gmail.com>  Tue, 05 May 2009 02:23:28 +0100
